[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/UI Sprites/UilityUI/X-ButtonNormal.png" type="Texture" id=1]
[ext_resource path="res://UI/UI Sprites/UilityUI/UtilityBG.png" type="Texture" id=2]
[ext_resource path="res://UI/UI Sprites/UilityUI/X-ButtonHover.PNG" type="Texture" id=3]
[ext_resource path="res://Scenes/Objects/Electronics/VendingMachineUtilityUI.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Dynamic Fonts/JetBrains Mono BOLD.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/UI Sprites/UilityUI/Vending Machine/DCMotorButton-Normal.png" type="Texture" id=6]
[ext_resource path="res://UI/UI Sprites/UilityUI/Vending Machine/DCMotorButton-Hover.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Dynamic Fonts/JetBrains Mono MEDIUM.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/JetBrains Mono/JetBrainsMono-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = SubResource( 1 )

[node name="VendingMachineUtilityUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -376, -160 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 368 )
texture = ExtResource( 2 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 1083.0
margin_top = 53.0
margin_right = 1133.0
margin_bottom = 103.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="StartMotorButton" type="TextureButton" parent="."]
margin_left = 532.0
margin_top = 244.0
margin_right = 682.0
margin_bottom = 394.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )

[node name="StartMotorLabel" type="RichTextLabel" parent="StartMotorButton"]
margin_left = -24.0
margin_top = 146.0
margin_right = 171.0
margin_bottom = 210.0
grow_horizontal = 2
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Start Motor[/center]"
text = "Start Motor"

[node name="ToggleSection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="StartMotor Icon" type="Sprite" parent="ToggleSection"]
position = Vector2( 642, 352 )
texture = ExtResource( 7 )

[node name="infoLabel" type="RichTextLabel" parent="ToggleSection"]
margin_left = 286.0
margin_top = 421.0
margin_right = 1006.0
margin_bottom = 485.0
grow_horizontal = 2
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]The motor has been activated.[/center]"
text = "The motor has been activated."
